# harbui

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  build.rs  docker-compose.yml
.github/workflows/: docker.yml  rust.yml
public/: package-lock.json  package.json  tailwind.config.js
resources/: app.vue  nuxt.config.ts  package-lock.json  package.json  postcss.config.js  tailwind.config.js  webpack.config.js
resources/components/: Confirm.vue  EmptyTableState.vue  FontAwesomeIcon.vue  Footer.vue  Header.vue  ItemManifest.vue  Loader.vue  MetricCard.vue  TableManifests.vue
resources/js/: index.js
resources/pages/: index.vue  pulling.vue  pushing.vue
resources/pages/image/[user]/: [name].vue
resources/plugins/: fontawesome.js  notiwind.js
src/: main.rs  manager.rs  routes.rs  types.rs
src/registry_api/: mod.rs  types.rs
src/routes/: api.rs  mod.rs  pages.rs  response_types.rs  types.rs
templates/: base.html.tera  footer.html.tera  image.html.tera  index.html.tera  nav.html.tera  pulling.html.tera  pushing.html.tera
