[package]
name = "harboui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
rocket = { version = "0.5.0", features = ["serde_json", "uuid", "secrets"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
pretty_env_logger = "0.5.0"
anyhow = "1.0.79"
dotenv = "0.15.0"
envconfig = "0.10.0"
itertools = "0.12.1"
log = "0.4.20"

[build-dependencies]
npm_rs = "1.0.0"
