[package]
name = "harbui"
version = "1.0.1"
edition = "2021"

[profile.release]
lto = "fat"
strip = "debuginfo"
opt-level = "z"
panic = "abort"
codegen-units = 1

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
rocket = { version = "0.5.0", features = ["serde_json", "uuid", "secrets", "json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
pretty_env_logger = "0.5.0"
anyhow = "1.0.79"
dotenv = "0.15.0"
envconfig = "0.10.0"
itertools = "0.12.1"
