[package]
name = "harbui"
version = "1.2.0"
edition = "2021"

[profile.release]
lto = "fat"
strip = "debuginfo"
opt-level = "z"
panic = "abort"
codegen-units = 1

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5", features = ["serde_json", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
pretty_env_logger = "0.5.0"
anyhow = "1.0"
dotenv = "0.15"
envconfig = "0.10"
itertools = "0.12"
